--- a/src/WRA.Umbraco.Web/Views/Partials/CheckoutPrevNext.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/CheckoutPrevNext.cshtml
@@ -6,14 +6,14 @@
     {
         if (Model.PreviousStep != null)
         {
-            <a class="btn btn-light px-0" href="@Model.PreviousStep.Url()">
+            <a class="btn btn-light" href="@Model.PreviousStep.Url()">
                 <i class="fa fa-chevron-left me-2" width="16" height="16" aria-hidden="true"></i>
                 Return to @Model.PreviousStep.ShortStepName
             </a>
         }
         else
         {
-            <a class="btn btn-light px-0" href="@Model.CartPage.Url()">
+            <a class="btn btn-light" href="@Model.CartPage.Url()">
                 <i class="fa fa-chevron-left me-2" width="16" height="16" aria-hidden="true"></i>
                 Return to Cart
             </a>
@@ -21,6 +21,13 @@
     }
     @if (Model.NextStep != null)
     {
-        <button class="btn btn-primary" type="submit">Continue to @Model.NextStep.ShortStepName</button>
+        if (Model.NextStep.ShortStepName == "Review")
+        {
+            <button class="btn btn-primary js-payment-validation" type="submit" disabled>Continue to @Model.NextStep.ShortStepName</button>
+        }
+        else
+        {
+            <button class="btn btn-primary" type="submit">Continue to @Model.NextStep.ShortStepName</button>
+        }
     }
 </div>
