Deployment 0c42b424-2961-48f4-84e1-dfa979402ec1: Run number 886

--- a/src/WRA.Umbraco.Web/Views/CollectionPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CollectionPage.cshtml
@@ -44,7 +44,7 @@
                     @Model.Name
                 }
             </h1>
-            CollectionsPage.chtml -- TO BE REMOVED?
+            @*CollectionsPage.chtml -- TO BE REMOVED?*@
         </div>
     </div>
 </header>
