--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/interiorHero.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/interiorHero.cshtml
@@ -101,7 +101,7 @@
                                                     </select>
                                                 </div>
                                             }
-                                            <button type="button" class="js-courses-submit btn btn-primary w-100 border-0 outline-0" disabled>Find Courses</button>
+                                            <button type="button" class="js-courses-submit btn btn-primary w-100 border-0 outline-0 bg-transparent" disabled>Find Courses</button>
                                         </fieldset>
                                     </form>
                                 </div>
