--- a/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
@@ -1,10 +1,20 @@
-﻿@using Umbraco.Cms.Web.Common.PublishedModels;
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Umbraco.Cms.Core.Security
 @using ContentModels = WRA.Umbraco.Models;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<WRA.Umbraco.Models.MywraCompany>
+@inject IMemberManager _memberManager
 
 @{
     Layout = "~/Views/_Layout.cshtml";
     var content = (ContentModels.MywraCompany)Model;
+    // get current member
+    var currentMemberQuery = await _memberManager.GetCurrentMemberAsync();
+    // cast it to a published contnet type
+    var currentMember = _memberManager.AsPublishedMember(currentMemberQuery);
+    // pass this type to the constructor of the strongly typed member model
+    var member = new ContentModels.Member(currentMember, new NoopPublishedValueFallback());
+
+
 }
 
 <div class="w-100">
@@ -220,7 +230,7 @@
                             </div>
                         </div>
                     </div>
-                
+
                     <!-- Company Information Change Form TAB -->
                     <div id="tabpanel-info-change" tabindex="0" role="tabpanel" aria-labelledby="tab-info-change" class="js-tabs-panel mywra-tab__panel" aria-hidden="true">
                         <div class="w-100 h-100">
@@ -281,7 +291,7 @@
                             </div>
                         </div>
                     </div>
-                                        
+
                     <!-- WRA PDF Forms Library Subscription TAB -->
                     <div id="tabpanel-library-subscriptions" tabindex="0" role="tabpanel" aria-labelledby="tab-library-subscriptions" class="js-tabs-panel mywra-tab__panel" aria-hidden="true">
                         <div class="w-100 h-100">
