Deployment e3491cfd-dabf-4de2-87f1-9860bc1c8cd9: Run number 909

--- a/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_legal-update-library.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/blocks/_legal-update-library.scss
@@ -1,11 +1,5 @@
-.hot-tip-content {
+.legal-update-content {
     //
-
-    &__inner {
-        strong, p {
-            display: inline;
-        }
-    }
 
     &:not(&--expanded) {
         display: -webkit-box;
@@ -15,7 +9,7 @@
     }
 }
 
-.hot-tip-toggle {
+.legal-update-toggle {
     all: unset;
     font-weight: 600;
     color: $primary;
