--- a/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
@@ -47,6 +47,7 @@
 @import 'blocks/cta-quick-links';
 @import 'blocks/image-text-row';
 @import 'blocks/hot-tip-library';
+@import 'blocks/legal-update-library';
 @import 'blocks/_calendar';
 
 @import 'umbraco-editors';
