--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/legalUpdateLibrary.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/legalUpdateLibrary.cshtml
@@ -92,15 +92,16 @@
             @for (var i = 1; i <= 5; i++)
             {
                 <div class="mb-4 p-4 bg-light">
-                    <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex flex-column-reverse flex-lg-row justify-content-lg-between align-items-lg-center">
                         <strong>June 2022 Legal Update: Trust Accounts: Unclaimed Earnest Money</strong>
                         <strong class="fs-xs">
                             Published <time datetime="2023-10-09">10/9/2023</time>
                         </strong>
                     </div>
-                    <div class="my-2 fs-sm">
+                    <div class="legal-update-content my-2 fs-sm">
                         Acceptance, Addendum to Listing Contract, Agency, Broker Responsibilities under WI Law, Buyer Agency, Code of Ethics, Designated Agency, Duties Owed by Brokers, Earnest Money, Email Issues , Email Issues, Fair Housing Law, Forms, Forms Revisions, Listing Protection, Real Estate Condition Report, Residential Listing Contract, Sex Offenders, Termination of Agency Relationships, WB-36, Acceptance, Addendum to Listing Contract, Agency, Broker Responsibilities under WI Law, Buyer Agency, Code of Ethics, Designated Agency, Duties Owed by Brokers, Earnest Money, Email Issues , Email Issues, Fair Housing Law, Forms, Forms Revisions, Listing Protection, Real Estate Condition Report, Residential Listing Contract, Sex Offenders, Termination of Agency Relationships, WB-36
                     </div>
+                    <button class="legal-update-toggle me-3" type="button">Show More</button>
                     <a class="text-decoration-none fw-bold" href="#">View PDF</a>
                 </div>
             }
