Deployment ed7ee652-63c1-4ccd-8493-3352d7a9f8fc: Run number 912

--- a/src/WRA.Umbraco.Web/Views/ProductPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/ProductPage.cshtml
@@ -116,7 +116,7 @@
                 </p>
             }
 
-            @if (!String.IsNullOrEmpty(Model.ProductTaxonomy.Name))
+            @if (Model.ProductTaxonomy != null)
             {
                 <p class="d-inline-block mb-2 px-2 py-1 bg-light fw-semibold text-uppercase">@Model.ProductTaxonomy.Name</p>
             }
