Deployment 061af06d-711b-411c-884c-5b5af9e9a888: Run number 917

--- a/src/WRA.Umbraco.Web/App_Plugins/umbracocommerce/backoffice/views/discount/rules/labelviews/companysubscriptionrule.html
+++ b/src/WRA.Umbraco.Web/App_Plugins/umbracocommerce/backoffice/views/discount/rules/labelviews/companysubscriptionrule.html
@@ -1,6 +1,6 @@
 <span>
   <span ng-if="model.nodeId">Subscription: {{model.nodeId | ncNodeName}}</span>
   <span ng-if="!model.nodeId">
-    Select Member Discount Product!
+    Select Company Discount Product!
   </span>
 </span>
