--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/legalUpdateLibrary.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/legalUpdateLibrary.cshtml
@@ -37,14 +37,6 @@
 
             @* mobile topic filters *@
             <div class="d-lg-none">
-                @*<select class="form-select mb-3 js-legal-update-library-mobile-topic-group-filter">
-                    <option value="">A-Z</option>
-                    @foreach (var group in topicGroups)
-                    {
-                        <!option value="@group.Name">@group.Name</!option>
-                    }
-                </select>*@
-
                 <select class="form-select js-legal-update-library-mobile-topic-filter">
                     <option value="">Select a topic</option>
                     @foreach (var group in topicGroups)
@@ -89,23 +81,16 @@
             </div>
         </div>
         <div class="col-12 col-lg-9">
-            @for (var i = 1; i <= 5; i++)
-            {
-                <div class="mb-4 p-4 bg-light">
-                    <div class="d-flex flex-column-reverse flex-lg-row justify-content-lg-between align-items-lg-center">
-                        <strong>June 2022 Legal Update: Trust Accounts: Unclaimed Earnest Money</strong>
-                        <strong class="fs-xs">
-                            Published <time datetime="2023-10-09">10/9/2023</time>
-                        </strong>
+            <div class="js-legal-update-library-list">
+                <div class="pb-5 pb-lg-10 text-center">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
                     </div>
-                    <div class="legal-update-content my-2 fs-sm">
-                        Acceptance, Addendum to Listing Contract, Agency, Broker Responsibilities under WI Law, Buyer Agency, Code of Ethics, Designated Agency, Duties Owed by Brokers, Earnest Money, Email Issues , Email Issues, Fair Housing Law, Forms, Forms Revisions, Listing Protection, Real Estate Condition Report, Residential Listing Contract, Sex Offenders, Termination of Agency Relationships, WB-36, Acceptance, Addendum to Listing Contract, Agency, Broker Responsibilities under WI Law, Buyer Agency, Code of Ethics, Designated Agency, Duties Owed by Brokers, Earnest Money, Email Issues , Email Issues, Fair Housing Law, Forms, Forms Revisions, Listing Protection, Real Estate Condition Report, Residential Listing Contract, Sex Offenders, Termination of Agency Relationships, WB-36
-                    </div>
-                    <button class="legal-update-toggle me-3" type="button">Show More</button>
-                    <a class="text-decoration-none fw-bold" href="#">View PDF</a>
                 </div>
-            }
-            <p class="text-center">pagination to do</p>
+            </div>
+            <nav class="d-flex align-items-center justify-content-center" aria-label="Pagination">
+                <ul class="js-legal-update-library-list-pagination search-pagination list-unstyled d-inline-flex gap-2 mx-2 mb-0"></ul>
+            </nav>
         </div>
     </div>
 </div>
