--- a/src/WRA.Umbraco.Web/Views/CheckoutPaymentMethodPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutPaymentMethodPage.cshtml
@@ -19,11 +19,14 @@
 
     @* checkout summary *@
     <div class="mb-5 px-3 py-1 border rounded">
-        <div class="d-flex flex-column flex-sm-row py-2">
-            <span style="width: 80px; color: #696f78;">Contact</span>
-            <span class="flex-grow-1" name="billingAddress.Email">@Model.Order.CustomerInfo.Email</span>
-            <a class="text-decoration-none" href="/checkout/customer-information">Change</a>
-        </div>
+        @if (@Model.Order.CustomerInfo.Email != null)
+        {
+            <div class="d-flex flex-column flex-sm-row py-2">
+                <span style="width: 80px; color: #696f78;">Contact</span>
+                <span class="flex-grow-1" name="billingAddress.Email">@Model.Order.CustomerInfo.Email</span>
+                <a class="text-decoration-none" href="/checkout/customer-information">Change</a>
+            </div>
+        }
         <div class="d-flex flex-column flex-sm-row py-2 border-top">
             <span style="width: 80px; color: #696f78;">Ship to</span>
             <span class="flex-grow-1">@Model.ReadableShippingAddress</span>
