Adding partial-view-macro 'umb://partial-view-macro/MemberLogin.cshtml'

--- a/src/WRA.Umbraco.Web/Views/MacroPartials/MemberLogin.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MacroPartials/MemberLogin.cshtml
@@ -10,7 +10,7 @@
 @{
     var loginModel = new LoginModel();
     // You can modify this to redirect to a different URL instead of the current one
-    loginModel.RedirectUrl = "/";
+    loginModel.RedirectUrl = "/mywra/profile";
 }
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
