Deployment 3b56db7c-4601-4f8d-a05d-1b71b34996a1: Run number 949

--- a/src/WRA.Umbraco.Web/Views/Partials/_breadcrumbsProducts.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_breadcrumbsProducts.cshtml
@@ -10,16 +10,30 @@
     {
         <nav class="container py-4" aria-label="breadcrumbs">
             <ul class="list-unstyled mb-0 breadcrumbs @(ViewData["CssClass"] != null ? ViewData["CssClass"].ToString() : string.Empty)">
-                @foreach (var parentPage in parentsPages)
+
+                @if (Model.ContentType.Alias == "productPage")
                 {
+                    var pageFromGui = Umbraco.Content(Guid.Parse("cac993c4-2fe0-42f1-a75b-3a14f4597f3f"));//Categories page
                     <li>
-                        <a href="@parentPage.Url()">@parentPage.Name</a>
+                        <a href="@Model.AncestorOrSelf(1).Url()">@Model.AncestorOrSelf(1).Name</a>
                     </li>
-                    @if (parentPage.Level == 1 && ViewData["ParentUrl"] != null)
+                    <li>
+                        <a href="@pageFromGui.Url()">@pageFromGui.Name</a>
+                    </li>
+                }
+                    else
+                {
+                    foreach (var parentPage in parentsPages)
                     {
                         <li>
-                            <a href="@ViewData["ParentUrl"].ToString()">@ViewData["ParentName"].ToString()</a>
+                            <a href="@parentPage.Url()">@parentPage.Name</a>
                         </li>
+                        @if (parentPage.Level == 1 && ViewData["ParentUrl"] != null)
+                        {
+                            <li>
+                                <a href="@ViewData["ParentUrl"].ToString()">@ViewData["ParentName"].ToString()</a>
+                            </li>
+                        }
                     }
                 }
 
