Deployment 2297de7f-2586-402d-b4c4-d5b091f261a6: Run number 951

--- a/src/WRA.Umbraco.Web/Views/Partials/_breadcrumbsProducts.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_breadcrumbsProducts.cshtml
@@ -10,15 +10,14 @@
     {
         <nav class="container py-4" aria-label="breadcrumbs">
             <ul class="list-unstyled mb-0 breadcrumbs @(ViewData["CssClass"] != null ? ViewData["CssClass"].ToString() : string.Empty)">
-
                 @if (Model.ContentType.Alias == "productPage")
                 {
-                    var pageFromGui = Umbraco.Content(Guid.Parse("cac993c4-2fe0-42f1-a75b-3a14f4597f3f"));//Categories page
+                    var storeCategoriesGuid = Umbraco.Content(Guid.Parse("cac993c4-2fe0-42f1-a75b-3a14f4597f3f"));//Categories page
                     <li>
                         <a href="@Model.AncestorOrSelf(1).Url()">@Model.AncestorOrSelf(1).Name</a>
                     </li>
                     <li>
-                        <a href="@pageFromGui.Url()">@pageFromGui.Name</a>
+                        <a href="@storeCategoriesGuid.Url()">WRA Store</a>
                     </li>
                 }
                     else
