--- a/src/WRA.Umbraco.Web/Views/Partials/_mywraNav.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_mywraNav.cshtml
@@ -5,34 +5,55 @@
     IEnumerable<IPublishedContent> myWraNavItems = Model.GetTemplateAlias() == "mywraHome" ? Model.Children().Where(x => x.IsVisible() && x.IsPublished()) : Model.SiblingsAndSelf().Where(x => x.IsVisible() && x.IsPublished()); ;
 }
 
-
 <div class="col-12 col-lg-3" style="background-color: var(--bs-gray-10)">
     <div class="mywra-left px-4 pb-6">
         <div class="border-top pt-4 mt-lg-9 border-dark d-block w-100"></div>
         <div class="mb-3 pb-2 d-lg-none">
-            @if (myWraNavItems.Any())
+
+            @if(Model.ContentType.Alias == "mywraBasicContent")
             {
-                <label class="visually-hidden" for="hot-tip-category">Select a category</label>
-                <select id="mywra-mobile" class="form-select" onchange="window.document.location.href=this.options[this.selectedIndex].value;">
-                    @foreach (var item in myWraNavItems)
-                    {
-                        <!option @(Model.Id == item.Id ? "selected" : "") value="@item.Url()">@item.Name</!option>
-                    }
-                </select>
+                <a href="@Model.Parent.Url()" class="js-page-tab-return-btn page-tab-return-btn mb-4 d-block outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel">
+                    <i class="fa-solid fa-chevron-left" aria-hidden="true"></i> <span class="fs-lg ps-2">Back to @Model.Parent.Name</span>
+                </a>
+            } else {
+
+                if (myWraNavItems.Any())
+                {
+                    <label class="visually-hidden" for="hot-tip-category">Select a category</label>
+                    <select id="mywra-mobile" class="form-select" onchange="window.document.location.href=this.options[this.selectedIndex].value;">
+                        @foreach (var item in myWraNavItems)
+                        {
+                            <!option @(Model.Id == item.Id ? "selected" : "") value="@item.Url()">@item.Name</!option>
+                        }
+                    </select>
+                }
+
             }
+
             <a href="/" class="btn-mywra btn btn-close btn-sm mt-3 d-inline-block p-2" style="color: var(--bs-red)">Log Out</a>
         </div>
         <div class="d-none d-lg-block">
-            @if (myWraNavItems.Any())
+            
+            @if(Model.ContentType.Alias == "mywraBasicContent")
             {
-                <ul class="list-unstyled d-flex flex-column gap-1">
-                    @foreach (var item in myWraNavItems)
-                    {
-                        <li>
-                            <a href="@item.Url()" class="btn-mywra" @(Model.Id == item.Id ? "aria-selected=true" : string.Empty)>@item.Name</a>
-                        </li>
-                    }
-                </ul>
+
+                <a href="@Model.Parent.Url()" class="js-page-tab-return-btn page-tab-return-btn mb-4 d-block outline-0 border-0 text-link fw-bold text-decoration-none" title="Close Panel">
+                    <i class="fa-solid fa-chevron-left" aria-hidden="true"></i> <span class="fs-lg ps-2">Back to @Model.Parent.Name</span>
+                </a>
+
+            } else {
+
+                @if (myWraNavItems.Any())
+                {
+                    <ul class="list-unstyled d-flex flex-column gap-1">
+                        @foreach (var item in myWraNavItems)
+                        {
+                            <li>
+                                <a href="@item.Url()" class="btn-mywra" @(Model.Id == item.Id ? "aria-selected=true" : string.Empty)>@item.Name</a>
+                            </li>
+                        }
+                    </ul>
+                }
             }
             <div class="border-top border-dark d-block w-100"></div>
             <a href="/" class="btn-mywra mt-3" style="color: var(--bs-red)">Log Out</a>
